[tool.poetry]
name = "myfastapi"
version = "0.1.0"
description = ""
authors = ["thkim <thkim96@ssrinc.co.kr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

